<resources>
    <string name="app_name">Elegant Dialog</string>
    <string name="image">Image</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="hey_kenneth">Hey Kenneth</string>
    <string name="hot_offers">Hot Offer!!</string>
    <string name="content">Content</string>
    <string name="colors">Colors</string>
    <string name="select">Select</string>
    <string name="background_top_color">Background\ntop color</string>
    <string name="background_bottom_color">Background\nbottom color</string>
    <string name="text_color">Text color</string>
    <string name="icon_color">Icon color</string>
    <string name="show">Show</string>
    <string name="description_text">Could you check out our new product?</string>
    <string name="content_text">We have a new app we just released on our beta channel. Would be great if you gave it a look😀👍?</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="pass">Pass</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_now">Not Now</string>
    <string name="later">Later</string>
    <string name="positive_button">Positive button</string>
    <string name="negative_button">Negative button</string>
    <string name="gotIt_button">GotIt button</string>
    <string name="default_dialog">Default Dialog</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="custom_dialog_recycler_view">Custom Dialog(recyclerview)</string>
    <string name="hide_positive_button">Hide positive button</string>
    <string name="hide_negative_button">Hide negative button</string>
    <string name="hide_gotIt_button">Hide got it button</string>
    <string name="hide_button_text">Hide button text</string>
    <string name="icon_background_color">Background\nIcon color</string>
    <string name="show_recycler_view">Show recyclerview</string>
    <string name="cancel_on_touch_outside">Cancel on touch outside</string>
    <string name="hide_rounded_corners">Hide rounded corners</string>
    <string name="burgers_for_days">Burgers for days!</string>
    <string name="buy_one_get_one_free">Buy 1 get 2 free offer ends this weekend😀😀</string>
    <string name="hey_kenneth_take_a_pick">Hey Kenneth, take a pick😀</string>
</resources>
