<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:textColor="@color/md_black_1000" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="text"
        android:textColor="@color/md_black_1000" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditTextContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content"
        android:inputType="text"
        android:textColor="@color/md_black_1000" />

    <TextView
        android:id="@+id/textViewBackgroundTopColor"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/circle_tintable"
        android:drawablePadding="4dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:drawablePadding="4dp"
        android:text="@string/background_top_color"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/textViewBackgroundBottomColor"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/circle_tintable"
        android:drawablePadding="4dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:drawablePadding="4dp"
        android:text="@string/background_bottom_color"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewTextColor"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/circle_tintable"
        android:drawablePadding="4dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:drawablePadding="4dp"
        android:text="@string/text_color"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditTextPositiveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/positive_button"
        android:inputType="text"
        android:textColor="@color/md_black_1000" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditTextNegativeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/negative_button"
        android:inputType="text"
        android:textColor="@color/md_black_1000" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditTextGotItButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gotIt_button"
        android:inputType="text"
        android:textColor="@color/md_black_1000" />
    <Button
        android:id="@+id/buttonShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:elevation="5dp"
        android:text="@string/show"
        android:textAlignment="center"
        android:textColor="@color/md_white_1000"
        android:visibility="visible" />
</LinearLayout>
</ScrollView>