<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewBackgroundTopColor"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/circle_tintable"
                        android:drawablePadding="4dp"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:drawablePadding="4dp"
                        android:gravity="center"
                        android:text="@string/background_top_color"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewBackgroundBottomColor"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/circle_tintable"
                        android:drawablePadding="4dp"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:drawablePadding="4dp"
                        android:gravity="center"
                        android:text="@string/background_bottom_color"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewBackgroundIconColor"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/circle_tintable"
                        android:drawablePadding="4dp"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:drawablePadding="4dp"
                        android:gravity="center"
                        android:text="@string/icon_background_color"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewIconColor"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/circle_tintable"
                        android:drawablePadding="4dp"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:drawablePadding="4dp"
                        android:gravity="center"
                        android:text="@string/icon_color"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPositiveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/positive_button"
            android:inputType="text"
            android:textColor="@color/md_black_1000" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextNegativeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/negative_button"
            android:inputType="text"
            android:textColor="@color/md_black_1000" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextGotItButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gotIt_button"
            android:inputType="text"
            android:textColor="@color/md_black_1000" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/show_recycler_view"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/switchShowRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/cancel_on_touch_outside"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/switchCancelOnTouchOutside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/hide_rounded_corners"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/switchHideRoundedCorners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/hide_button_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/switchHideButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false" />


        </LinearLayout>
        <Button
            android:id="@+id/buttonShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:elevation="5dp"
            android:text="@string/show"
            android:textAlignment="center"
            android:textColor="@color/md_white_1000"
            android:visibility="visible" />
    </LinearLayout>
</ScrollView>